[package]
name = "eyaml-rs"
version = "0.1.0"
authors = ["Evan Chaney <evanachaney@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = ">= 0.4.1"
clap = { version = "2.33.3", features = ["yaml", "color", "suggestions"] }
openssl = "0.10"
#bytes = "0.4.8"
