[package]
name = "eyaml-rs"
version = "0.1.1"
authors = ["Evan Chaney <evanachaney@gmail.com>"]
edition = "2018"
description = "Rust port of EYAML RubyGem"
readme = "README.md"
repository = "https://github.com/evan-chaney/eyaml-rs"
license-file = "LICENSE.txt"
keywords = ["eyaml", "yaml", "ruby"]
categories = ["command-line-utilities"]
exclude = ["keys/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = ">= 0.4.1"
clap = { version = "2.33.3", features = ["yaml", "color", "suggestions"] }
openssl = "0.10.30"

